--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <main id="main-holder">
-    <h1 id="login-header">Login</h1>
+    <h1 id="login-header">Document Management System</h1>
+    <h2 id="login-header">Login</h2>
     
     <div id="login-error-msg-holder">
       <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
