--- a/student.html
+++ b/student.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="loginpage.css">
-  <script defer src="login.js"></script>
+  <link rel="stylesheet" href="student.css">
+  <script defer src="student.js"></script>
 </head>
 
 <body>
   <main id="main-holder">
     <h1 id="login-header">Student</h1>
-
+  
   </main>
+  <a href="https://mohanv2030.github.io/dms/" id="home-page-link"><u>Back to Home page</u></a>
 </body>
 
 </html>
