--- a/teacher.html
+++ b/teacher.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="loginpage.css">
-  <script defer src="login.js"></script>
+  <link rel="stylesheet" href="student.css">
+  <script defer src="student.js"></script>
 </head>
 
 <body>
