--- a/teacher.html
+++ b/teacher.html
@@ -12,6 +12,7 @@
 <body>
   <main id="main-holder">
     <h1 id="login-header">Teacher</h1>
+    <a href="https://mohanv2030.github.io/dms/" id="home-page-link"><u>Back to Home page</u></a>
   </main>
 </body>
 
