--- a/student.html
+++ b/student.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Student</title>
   <link rel="stylesheet" href="student.css">
   <script defer src="student.js"></script>
 </head>
