--- a/teacher.html
+++ b/teacher.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Teacher</title>
   <link rel="stylesheet" href="teacher.css">
   <script defer src="teacher.js"></script>
 </head>
